# DATABASES_ICT_2022-2023

./: 123.pgerd  DB_LAB2_KIM.docx  DB_LAB5_Volgin.docx  Data_model.erwin  Dump  K32392_Барталевич_ЛР5.odt  LICENSE  Lab1_DB.sql  Lab2_bd_Chaptykov.docx  Model1.ndm2  NikitinPavel2.docx  README.md  RestaurantBackup.sql  RestaurantBackupPlain.sql  Screencast from 07.06.2023 20:43:09.webm  Untitled Diagram.drawio  avtovokzal_bk.sql  back_p.sql  bank.erwin  bd.lab.plain  bd_lab2  config.php  create.php  db.php  delete.php  delete_hotel.php  employees.php  hotel.php  index.php  insert.php  insert_hotel.php  library.sql  library_bk  lr111111  model1.erwin  product.php  redacted_schema.pgerd  redacted_scheme.pgerd  restaurant.ndm2  select_hotel.php  (+15 more)
1 lab/: Joe Taxi
3SEM_lab1/: PoezdaBU.sql  Лаба1_Акулов_K32391.docx
4SEM_LAB2/: Poezda.sql  PoezdaQue.sql  PoezdaQue2.sql  PoezdaValues.sql  after_ind.csv  before_ind.csv
4SEM_kab1_fixed/: PoezdaBU.sql
K32402_СтаровойтоваЕлизавета_ЛР4_СЕМ4/: DB_LAB4_Starovoytova.docx  delete.html  delete.php  insert.html  insert.php  update.html  update.php
K32421_Булыга_Екатерина/: custom.backup  plain.sql
LAB_1/: postgres_bd_backup
LAB_2/: ~$лаб2.docx
LAB_4/: github project link.md
LR1_4/: bank_backup
LR2/: bank.erwin
LR5/: ЛР№5_Тюлюкин.docx
Lab 1.2/: RestaurantBasePlain  read
students/K32392/Stukalov_Artem/LR_4/: .env  Cargo.toml
students/K32392/Stukalov_Artem/LR_4/migrations/2023-05-17-202144_create_meetings/: down.sql  up.sql
students/K32392/Stukalov_Artem/LR_4/src/: handlers.rs  main.rs  models.rs  schema.rs
(+586 files in other folders)
